syntax = "proto3";

import "domains/security/models/auth.proto";

package domains.security.services.base.auth;
option go_package = "github.com/kirvader/BodyController/domains/security/services/base/auth/proto";

service Auth {
  	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
	rpc LogIn(LogInRequest) returns (LogInResponse);
}

message CreateUserRequest {
	domains.security.models.UserCredentials user_credentials = 1;
};

message CreateUserResponse {};

message DeleteUserRequest {
	string username = 1;
};

message DeleteUserResponse {};

message LogInRequest {
	domains.security.models.UserCredentials user_credentials = 1;
};

message LogInResponse {
	string token = 1;
};
